# untold-lang

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  README.md  RELEASE_NOTES_v2.3.0.md  ROADMAP.md  SECURITY.md  SPEC.md  pyproject.toml  ruff.toml  setup.py
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml  test.yml
cli/: build.py  commands.py  config.py  debug.py  main.py  native_compiler.py  package_registry.py  packages.py  repl.py  scaffold.py
docs/: docs.html  index.html  playground.html
src/compiler/: bundler.py  codegen.py  optimizer.py
src/interpreter/: environment.py  interpreter.py
src/lexer/: lexer.py  tokens.py
src/parser/: ast_nodes.py  parser.py
stdlib/: ai.py  crypto.py  fs.py  hack.py  net.py  regex.py  shell.py  time.py  web.py
tests/: test_interpreter.py  test_lexer.py  test_parser.py  test_stdlib_fs.py  test_stdlib_modules.py  test_stdlib_net.py  test_stdlib_web.py
tests/samples/: hello.ut  stdlib_test.ut
untold_comparison_programs/: README.md
untold_comparison_programs/01_hello_world/: main.ut
untold_comparison_programs/02_variables/go/: main.go
untold_comparison_programs/02_variables/javascript/: main.js
untold_comparison_programs/02_variables/python/: main.py
untold_comparison_programs/02_variables/untold/: main.ut
untold_comparison_programs/03_functions/go/: main.go
untold_comparison_programs/03_functions/javascript/: main.js
untold_comparison_programs/03_functions/python/: main.py
untold_comparison_programs/03_functions/untold/: main.ut
untold_comparison_programs/04_control_flow/go/: main.go
untold_comparison_programs/04_control_flow/javascript/: main.js
untold_comparison_programs/04_control_flow/python/: main.py
untold_comparison_programs/04_control_flow/untold/: main.ut
untold_comparison_programs/05_file_operations/go/: main.go
untold_comparison_programs/05_file_operations/javascript/: main.js
untold_comparison_programs/05_file_operations/python/: main.py
untold_comparison_programs/05_file_operations/untold/: main.ut
untold_comparison_programs/06_http_requests/go/: main.go
untold_comparison_programs/06_http_requests/javascript/: main.js
untold_comparison_programs/06_http_requests/python/: main.py
untold_comparison_programs/06_http_requests/untold/: main.ut
untold_comparison_programs/07_security/go/: main.go
untold_comparison_programs/07_security/javascript/: main.js
untold_comparison_programs/07_security/python/: main.py
untold_comparison_programs/07_security/untold/: main.ut
untold_comparison_programs/08_oop/go/: main.go
untold_comparison_programs/08_oop/javascript/: main.js
untold_comparison_programs/08_oop/python/: main.py
untold_comparison_programs/08_oop/untold/: main.ut
untold_comparison_programs/09_error_handling/go/: main.go
untold_comparison_programs/09_error_handling/javascript/: main.js
untold_comparison_programs/09_error_handling/python/: main.py
untold_comparison_programs/09_error_handling/untold/: main.ut
untold_comparison_programs/10_async/go/: main.go
untold_comparison_programs/10_async/javascript/: main.js
untold_comparison_programs/10_async/python/: main.py
untold_comparison_programs/10_async/untold/: main.ut
vscode-extension/: extension.js  language-configuration.json  package.json  untold-lang-0.1.0.vsix
vscode-extension/snippets/: untold.code-snippets
vscode-extension/syntaxes/: untold.tmLanguage.json
