[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "untold-lang"
version = "0.2.4"
description = "Untold Lang — The Language Without Limits"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Antony Jude", email = "thedrjude@github.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
]
keywords = ["programming-language", "interpreter", "compiler", "ai", "scripting", "web", "security"]
requires-python = ">=3.10"
dependencies = []

[project.scripts]
untold = "cli.main:main"

[project.urls]
Homepage = "https://github.com/thedrjude/untold-lang"
Documentation = "https://thedrjude.github.io/untold-lang/"
Repository = "https://github.com/thedrjude/untold-lang"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = []

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true