[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "untold-lang"
version = "2.2.5"
description = "Untold Lang v2.2.0 — The Language Without Limits"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Antony Jude", email = "thedrjude@github.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
]
keywords = ["programming-language", "interpreter", "compiler", "ai", "scripting", "web", "security"]
requires-python = ">=3.10"
dependencies = []

[project.scripts]
untold = "cli.main:main"

[project.urls]
Homepage = "https://github.com/thedrjude/untold-lang"
Documentation = "https://thedrjude.github.io/untold-lang/"
Repository = "https://github.com/thedrjude/untold-lang"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true